# openenv-email-triage

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pypproject.toml  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
