[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv customer support email triage environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
